--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,9 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="contact.html">Contact Us</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="edubot.html">AR online BOT</a>
+                        </li>
                         <!-- search button -->
                         <div class="search-right">
                             <a href="#search" class="btn button-style" title="search">Search</a>
