--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,7 @@
                     <span class="fa fa-laptop"></span>
                     <h5 class="text-uppercase mt-3 mb-2">Online Support</h5>
                     <p>24/7 online support will be provided through this web site .</p>
-                    <a href="#call" class="btn button-style button-2 mt-4">
+                    <a href="https://webchat.botframework.com/embed/educationbot-dbwoe3v?s=0uHRTmYodxs.VHNpwklEvwPaCpZe6Blu9t1nEEj4x7nYgHQih0sxhvI" class="btn button-style button-2 mt-4">
                         Call Now
                     </a>
                 </div>
@@ -183,7 +183,7 @@
                     <span class="fa fa-comments"></span>
                     <h5 class="text-uppercase mt-3 mb-2">Live Chat 24/7</h5>
                     <p>Chat with us on AR Online study for giving whatsapp </p>
-                    <a href="#chat" class="btn button-style button-2 mt-4">
+                    <a href="https://webchat.botframework.com/embed/educationbot-dbwoe3v?s=0uHRTmYodxs.VHNpwklEvwPaCpZe6Blu9t1nEEj4x7nYgHQih0sxhvI" class="btn button-style button-2 mt-4">
                         Let's Chat
                     </a>
                 </div>
@@ -191,7 +191,7 @@
                     <span class="fa fa-question"></span>
                     <h5 class="text-uppercase mt-3 mb-2">Any Questions</h5>
                     <p>Ask any questions with chat us over ai chat bot available.</p>
-                    <a href="#ask" class="btn button-style button-2 mt-4">
+                    <a href="https://webchat.botframework.com/embed/educationbot-dbwoe3v?s=0uHRTmYodxs.VHNpwklEvwPaCpZe6Blu9t1nEEj4x7nYgHQih0sxhvI" class="btn button-style button-2 mt-4">
                         Ask Now
                     </a>
                 </div>
