--- a/contact.html
+++ b/contact.html
@@ -183,7 +183,7 @@
                     <span class="fa fa-comments"></span>
                     <h5 class="text-uppercase mt-3 mb-2">Live Chat 24/7</h5>
                     <p>Chat with us on AR Online study for giving whatsapp </p>
-                    <a href="https://webchat.botframework.com/embed/educationbot-dbwoe3v?s=0uHRTmYodxs.VHNpwklEvwPaCpZe6Blu9t1nEEj4x7nYgHQih0sxhvI" class="btn button-style button-2 mt-4">
+                    <a href='https://webchat.botframework.com/embed/educationbot-dbwoe3v?s=0uHRTmYodxs.VHNpwklEvwPaCpZe6Blu9t1nEEj4x7nYgHQih0sxhvI" class="btn button-style button-2 mt-4'>
                         Let's Chat
                     </a>
                 </div>
