--- a/about.html
+++ b/about.html
@@ -445,7 +445,7 @@
         <div class="copyright-footer text-center">
             <div class="container">
                 <div class="columns">
-                    <p>@2022 Online ELearn Study. All rights reserved. Design by <a href="https://airreality.blogsopt.com/"
+                    <p>@2022 Online ELearn Study. All rights reserved. Design by <a href="https://red-beach-096a64310.2.azurestaticapps.net/index.html"
                             target="_blank"> Roshith Noorbasha</a>
                     </p>
                 </div>
