--- a/courses.html
+++ b/courses.html
@@ -402,7 +402,7 @@
         <div class="copyright-footer text-center">
             <div class="container">
                 <div class="columns">
-                    <p>@2022 Online Study E-Learining. All rights reserved. Design by <a href="https://airreality.blogspot.com/"
+                    <p>@2022 Online Study E-Learining. All rights reserved. Design by <a href="https://red-beach-096a64310.2.azurestaticapps.net/index.html"
                             target="_blank"> Roshith Noorbasha </a>
                     </p>
                 </div>
