--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
         <div class="copyright-footer text-center">
             <div class="container">
                 <div class="columns">
-                    <p>@2022 Online Study E-Learning. All rights reserved. Design by <a href="https://airreality.blogsopt.com/"
+                    <p>@2022 Online Study E-Learning. All rights reserved. Design by <a href="https://red-beach-096a64310.2.azurestaticapps.net/index.html"
                             target="_blank"> Roshith Noorbasha</a>
                     </p>
                 </div>
