--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>AR Online Study - Education Training and Internship - Home : AR Online Study</title>
+    <title> AR Online Study - Education Training and Internship - Home : AR Online Study</title>
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
@@ -22,7 +22,7 @@
             <nav class="navbar navbar-expand-lg stroke">
                 <h1>
                     <a class="navbar-brand" href="index.html">
-                        <img class="img-fluid" src="assets/images/logo.png" alt=" "> Online Study
+                        <img class="img-fluid" src="assets/images/logo.png" alt=" ">AR Online Study
                     </a>
                 </h1>
                 <!-- if logo is image enable this   
