--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>AR Online Study Platform  - Education Training And Internship - About : AR Online Study</title>
+    <title>Edusphere Platform  - Education Training And Internship - About : AR Online Study</title>
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
