--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>AR Online Study - Education Training and Internship - Contact : AR online Study</title>
+    <title>Edusphere - Education Training and Internship - Contact : AR online Study</title>
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
